# constructsim-ros2-citylab

custom_interfaces/: CMakeLists.txt  package.xml
robot_patrol/: CMakeLists.txt  package.xml
robot_patrol/launch/: main.launch.py  start_direction_service.launch.py  start_test_service.launch.py
robot_patrol/src/: direction_service.cpp  go_to_pose_action.cpp  patrol.cpp  patrol_with_service.cpp  test_service.cpp
